--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -1,59 +1,22 @@
 {% assign contact = site.data.data.contact %}
-{% if contact %}
-<section class="contact">
-    <div class="title">Contato</div>
-    {% if contact.email %}
-        <div class="contact-item">
-            <i data-feather="mail"></i>
-            <a href="#">
-                {{contact.email}}
+<section class="mb-4.5 break-inside-avoid">
+    <ul class="list-inside pr-7 text-slate-700 dark:text-slate-500">
+        <li class="mt-1.5 leading-normal text-md">
+            <a href="//{{contact.site}}" class="group hover:underline">
+                {{contact.site}}
+                <span class="inline-block text-slate-500 print:text-black font-normal group-hover:text-slate-700 transition duration-100 ease-in">↗</span>
             </a>
-        </div>
-    {% endif %}
-
-    {% if contact.phone %}
-        <div class="contact-item">
-            <i data-feather="phone"></i>
-            <a href="#">
+        </li>
+        <li class="mt-1.5 leading-normal text-md">
+            <a href="{{contact.email_form_url}}" class="group">
+                Formulário de contato
+                <span class="inline-block text-slate-500 print:text-black font-normal group-hover:text-slate-700 transition duration-100 ease-in">↗</span>
+            </a>
+        </li>
+        <li class="mt-1.5 leading-normal text-md">
+            <a href="https://wa.me/{{contact.whatsapp}}" class="hover:underline">
                 {{contact.phone}}
             </a>
-        </div>
-    {% endif %}
-
-    {% if contact.github %}
-        <div class="contact-item">
-            <i data-feather="github"></i>
-            <a href="https://github.com/{{contact.github}}">
-                {{contact.github}}
-            </a>
-        </div>
-    {% endif %}
-
-    {% if contact.linkedin %}
-        <div class="contact-item">
-            <i data-feather="linkedin"></i>
-            <a href="https://linkedin.com/in/{{contact.linkedin}}">
-                {{contact.linkedin}}
-            </a>
-        </div>
-    {% endif %}
-
-    {% if contact.twitter %}
-        <div class="contact-item">
-            <i data-feather="twitter"></i>
-            <a href="https://twitter.com/{{contact.twitter}}">
-                {{contact.twitter}}
-            </a>
-        </div>
-    {% endif %}
-
-    {% if contact.gitlab %}
-        <div class="contact-item">
-            <i data-feather="gitlab"></i>
-            <a href="https://gitlab.com/{{contact.gitlab}}">
-                {{contact.gitlab}}
-            </a>
-        </div>
-    {% endif %}
+        </li>
+    </ul>
 </section>
-{% endif %}
