--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -1,20 +1,19 @@
-{% assign experience = site.data.data.experience %}
-{% if experience %}
-<section class="experiance">
-    <h2 class="title">EXPERIÊNCIA PROFISSIONAL</h2>
-    {% for exp in experience %}
-        <div class="experience-item">
-            <div class="role">
-                {{exp.role}}
-            </div>
-            <div class="company">
-                {{exp.company}} 
-                <span class="time">{{exp.time}}</span>
-            </div> 
-            <div class="details">{{exp.details}}</div>
-<!--            <p class="technologies">- {{exp.technologies_used}}</p>-->
-        </div>
-       
-    {% endfor %}
+{% assign experiences = site.data.data.experiences %}
+{% for experience in experiences %}
+<section class="mb-4 break-inside-avoid">
+    <header>
+        <h3 class="text-lg font-semibold text-slate-600 dark:text-slate-300 leading-snugish">
+            {{experience.company}}
+        </h3>
+        <p class="leading-normal text-md text-slate-600 dark:text-slate-400">
+            {{experience.time}} | {{experience.role}}
+        </p>
+    </header>
+    <ul>
+        <li class="mt-2.1 text-md text-slate-500 leading-normal text-justify">
+            <span class="absolute -ml-3 sm:-ml-3.2 select-none transform -translate-y-px">›</span>
+            {{experience.details}}
+        </li>
+    </ul>
 </section>
-{% endif %}
+{% endfor %}
