--- a/_includes/head.html
+++ b/_includes/head.html
@@ -1,14 +1,39 @@
 <head>
-    <!-- Styles -->
-    <link rel="stylesheet" href="{{'/assets/css/main.css' | absolute_url}}">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    
-    <!-- Meta tags -->
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width,initial-scale=1.0">
-
-    <!-- Favicon -->
-    <link rel="shortcut icon" href="favicon.ico">
-    
-    <title>{{site.title}}</title>
+  <!-- Styles -->
+  <script src="https://cdn.tailwindcss.com"></script>
+  <script>
+    tailwind.config = {
+      darkMode: 'class',
+      screens: {
+        screen: {"raw": "screen"},
+        print: {"raw": "print"},
+        xsm: "500px",
+        sm: "640px",
+        md: "811px",
+        lg: "1051px",
+        xl: "1280px",
+      },
+      extend:{
+        lineHeight: {
+          snugish: "1.32",
+          normal: "1.34",
+        },
+      }
+    }
+  </script>
+  <!-- Meta tags -->
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <!-- Favicon -->
+  {% include favicon.html %}
+    <link rel="canonical" href="{{ page.url | absolute_url }}">
+  <title>{{site.title}}</title>
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id={{site.googleanalytics}}"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag(){dataLayer.push(arguments);}
+    gtag('js', new Date());
+    gtag('config', '{{site.googleanalytics}}');
+  </script>
 </head>
