--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -1,16 +1,20 @@
 {% assign projects = site.data.data.projects %}
-{% if projects %}
-<section class="projects">
-    <h2 class="title">Projetos</h2>
-    {% for p in projects %}
-        <div class="project">
-            <span>
-                <a class="project-link" href="{{p.link}}">
-                    {{p.title}}
-                </a>
-            </span>
-            <span class="details">- {{p.details}}</span>
-        </div>
-    {% endfor %}
+{% for project in projects %}
+<section class="mb-4.5 break-inside-avoid">
+    <header>
+        <h3 class="text-lg font-semibold eading-snugish text-slate-600 dark:text-slate-300">
+            <a href="{{project.link}}" class="group">
+                {{project.title}}
+                <span class="inline-block text-slate-500 print:text-black font-normal group-hover:text-slate-700 transition duration-100 ease-in">↗</span>
+            </a>
+        </h3>
+        <p class="leading-normal text-md text-slate-600 dark:text-slate-400">
+            {{project.time}}
+        </p>
+    </header>
+    <p class="mt-2.1 text-md text-slate-500 leading-normal">
+        {{project.details}}
+    </p>
 </section>
-{% endif %}
+{% endfor %}
+
