--- a/_includes/volunteering.html
+++ b/_includes/volunteering.html
@@ -1,19 +1,19 @@
 {% assign volunteering = site.data.data.volunteering %}
-{% if volunteering %}
-<section class="volunteering">
-    <h2 class="title">Voluntário</h2>
-    {% for vol in volunteering %}
-        <div class="volunteering-item">
-            <div class="role">
-                {{vol.role}}
-            </div>
-            <div class="organization">
-                {{vol.company}}
-                <span class="time">{{vol.time}}</span>
-            </div>
-            <div class="details">{{vol.details}}</div>    
-        </div>
-        
-    {% endfor %}
+{% for volunteer in volunteering %}
+<section class="mb-4 break-inside-avoid">
+    <header>
+        <h3 class="text-lg font-semibold text-slate-600 dark:text-slate-300 leading-snugish">
+            {{volunteer.company}}
+        </h3>
+        <p class="leading-normal text-md text-slate-600 dark:text-slate-400">
+            {{volunteer.time}} | {{volunteer.role}}
+        </p>
+    </header>
+    <ul>
+        <li class="mt-2.1 text-md text-slate-500 leading-normal text-justify">
+            <span class="absolute -ml-3 sm:-ml-3.2 select-none transform -translate-y-px">›</span>
+            {{volunteer.details}}
+        </li>
+    </ul>
 </section>
-{% endif %}
+{% endfor %}
