--- a/_includes/experience.html
+++ b/_includes/experience.html
@@ -11,7 +11,7 @@
     </header>
     <ul>
         <li class="mt-2.1 text-md text-slate-500 leading-normal text-justify">
-            <span class="absolute -ml-3 sm:-ml-3.2 select-none transform -translate-y-px">›</span>
+            <span class="sm:-ml-3.2 select-none transform -translate-y-px">›</span>
             {{experience.details}}
         </li>
     </ul>
