--- a/_includes/events.html
+++ b/_includes/events.html
@@ -1,19 +1,19 @@
-{% assign projects = site.data.data.projects %}
-{% for project in projects %}
+{% assign events = site.data.data.events %}
+{% for event in events %}
 <section class="mb-4.5 break-inside-avoid">
     <header>
         <h3 class="text-lg font-semibold eading-snugish text-slate-600 dark:text-slate-400">
-            <a href="{{project.link}}" class="group">
-                {{project.title}}
+            <a href="{{event.link}}" class="group" title="{{event.details}}">
+                {{event.title}}
                 <span class="inline-block text-slate-500 print:text-black font-normal group-hover:text-slate-700 transition duration-100 ease-in">↗</span>
             </a>
         </h3>
         <p class="leading-normal text-md text-slate-600 dark:text-slate-400">
-            {{project.time}}
+            {{event.time}}
         </p>
     </header>
     <p class="mt-2.1 text-md text-slate-500 leading-normal">
-        {{project.details}}
+        {{event.local}}
     </p>
 </section>
 {% endfor %}
