--- a/_includes/contact-modal.html
+++ b/_includes/contact-modal.html
@@ -11,7 +11,7 @@
         <h2 class="block text-2xl font-bold text-gray-800 dark:text-white">😀 Bem vindo, vamos conversar!</h2>
         <div class="w-10"></div>
         <button type="button" class="z-50 cursor-pointer" @click="showModal = false">
-          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor">
+          <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" class="stroke-current dark:stroke-white">
             <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M6 18L18 6M6 6l12 12" />
           </svg>
         </button>
@@ -21,9 +21,9 @@
           <div class="grid gap-y-4">
             <div>
               <div class="relative">
-                <input type="text" id="name" name="name" class="py-3 px-4 mb-2 block w-full border-2 dark:bg-gray-700 dark:border-gray-800 rounded-md text-sm shadow-sm outline-0 caret-green-500" required aria-describedby="name-error" placeholder="Nome">
-                <input type="email" id="email" name="email" class="py-3 px-4 mb-2 block w-full border-2 dark:bg-gray-700 dark:border-gray-800 rounded-md text-sm shadow-sm outline-0 caret-green-500" required aria-describedby="email-error" placeholder="E-mail">
-                <textarea name="message" id="message" class="py-3 px-4 block w-full border-2 dark:bg-gray-700 dark:border-gray-800 rounded-md text-sm shadow-sm outline-0 caret-green-500" cols="30" rows="5" required aria-describedby="message-error" placeholder="Mensagem"></textarea>
+                <input type="text" id="name" name="name" class="text-slate-900 dark:text-slate-100 py-3 px-4 mb-2 block w-full border-2 dark:bg-gray-700 dark:border-gray-800 rounded-md text-sm shadow-sm outline-0 caret-green-500" required aria-describedby="name-error" placeholder="Nome">
+                <input type="email" id="email" name="email" class="text-slate-900 dark:text-slate-100 py-3 px-4 mb-2 block w-full border-2 dark:bg-gray-700 dark:border-gray-800 rounded-md text-sm shadow-sm outline-0 caret-green-500" required aria-describedby="email-error" placeholder="E-mail">
+                <textarea name="message" id="message" class="text-slate-900 dark:text-slate-100 py-3 px-4 block w-full border-2 dark:bg-gray-700 dark:border-gray-800 rounded-md text-sm shadow-sm outline-0 caret-green-500" cols="30" rows="5" required aria-describedby="message-error" placeholder="Mensagem"></textarea>
               </div>
             </div>
             <button type="submit" class="py-3 px-4 inline-flex justify-center items-center gap-2 rounded-md border border-transparent font-semibold bg-blue-500 text-white hover:bg-blue-600 focus:outline-none focus:ring-2 focus:ring-blue-500 focus:ring-offset-2 transition-all text-sm dark:focus:ring-offset-gray-800">
