Adjust print and responsive

--- a/_includes/contact.html
+++ b/_includes/contact.html
@@ -7,7 +7,7 @@
                 <span class="inline-block text-slate-500 print:text-black font-normal group-hover:text-slate-700 transition duration-100 ease-in">↗</span>
             </a>
         </li>
-        <li class="mt-1.5 leading-normal text-md">
+        <li class="mt-1.5 leading-normal text-md print:hidden">
             <div x-data="{ 'showModal': false }">
                 <a href="#" @click="showModal = !showModal" class="group">
                     Formulário de contato
