--- a/_includes/toggle-theme.html
+++ b/_includes/toggle-theme.html
@@ -1,5 +1,5 @@
-<div class="fixed bottom-5 left-5 print:hidden">
-    <button id="theme-toggle" @click="toggleTheme" type="button" class="border-0 text-slate-500 dark:text-slate-400 hover:bg-slate-200 dark:hover:bg-slate-700 focus:outline-none rounded-full text-sm p-2 w-14 h-14 dark:bg-slate-800 cursor-pointer">
+<div class="fixed top-5 right-5 print:hidden">
+    <button id="theme-toggle" @click="toggleTheme" type="button" class="border-0 text-slate-500 dark:text-slate-400 hover:bg-slate-200 dark:hover:bg-slate-700 focus:outline-none rounded-full text-sm p-2 w-10 h-10 dark:bg-slate-800 cursor-pointer">
         <svg xmlns="http://www.w3.org/2000/svg" class="w-full" viewBox="0 0 20 20" fill="currentColor" x-show="!isDark">
             <path d="M17.293 13.293A8 8 0 016.707 2.707a8.001 8.001 0 1010.586 10.586z" />
         </svg>
