--- a/_includes/certificates.html
+++ b/_includes/certificates.html
@@ -1,3 +1,3 @@
 <section class="mb-4.5 break-inside-avoid">
-    <img src="public/images/oci_basic.png" width="150" alt="Oracle Cloud Infrastructure 2023 Foundations Associate" title="Oracle Cloud Infrastructure 2023 Foundations Associate">
+    <img src="https://brm-workforce.oracle.com/pdf/certview/images/OCIF2023CA.png" width="150" alt="Oracle Cloud Infrastructure 2023 Certified Foundations Associate" title="Oracle Cloud Infrastructure 2023 Certified Foundations Associate">
 </section>
