--- a/_includes/projects.html
+++ b/_includes/projects.html
@@ -8,9 +8,9 @@
                 <span class="inline-block text-slate-500 print:text-black font-normal group-hover:text-slate-700 transition duration-100 ease-in">↗</span>
             </a>
         </h3>
-        <p class="leading-normal text-md text-slate-600 dark:text-slate-400">
-            {{project.time}}
-        </p>
+        <!--<p class="leading-normal text-md text-slate-600 dark:text-slate-400">-->
+        <!--    {{project.time}}-->
+        <!--</p>-->
     </header>
     <p class="mt-2.1 text-md text-slate-500 leading-normal">
         {{project.details}}
